--- a/index.html
+++ b/index.html
@@ -1,12 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content ="Orinoco, des ours en peluche fait à la main">
+
+   
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
+     crossorigin="anonymous">
+     <!--css-->
+     <link rel="stylesheet"  href="public/css/style.css"/>
+
     <title>Document</title>
 </head>
-<body>
-    
+
+
+
+<body class="container">
+    <header class="bg-dark ">
+        <div class="container">
+            <div class="row">
+                <nav class="col navbar navbar-expand-lg nav-bar-dark">
+                    <a class="navbar-brand" href="index.html">
+                    <img src= "images/orinoco-logo.png" width="110" height="90" alt="image du logo ORINOCO"/></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
+                        <span class="navbar-toggler-icon"></span>
+                     </button>
+                <div id="navbarContent" class="collapse navbar-collapse">    
+                    <ul class="navbar-nav">
+                        <li class="nav-items active">
+                            <a class="nav-link" href="index.html">accueil</a>
+                        </li>
+                        <li class="nav-items">
+                            <a class="nav-link" href="#">Panier
+                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
+                                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                              </svg>
+                            </a>                            
+                        </li>
+                    </ul>
+                </div>    
+                </nav>
+            </div>    
+        </div>
+    </header>
+
+
+    <main class="container">
+        <div class="row">
+            <div class="col">
+                <div class="jumbotron">
+                    <h1>Notre selection d'ours en peluche fait à la main</h1>    
+                </div>                
+            </div>
+        </div>
+        <!--1 ere  ligne-->
+        <div class="row">
+            <div class ="col-12 col-lg-6">
+                <!--1 ere carte-->
+                <div class="card">
+                    <img class="card-img-top" src="images/teddy_1.jpg" alt="image ourson 1">
+                    <div class="card-body">
+                        <h2 class= "card-title"></h2>
+                        <P class="card-text">ours1</P>
+                    </div>
+                </div>                
+            </div>
+            <div class ="col-12 col-lg-6">
+                <!--2 eme carte-->
+                <div class="card">
+                    <img class="card-img-top" src="images/teddy_2.jpg" alt="image ourson 2">
+                    <div class="card-body">
+                        <h2 class= "card-title"></h2>
+                        <P class="card-text">ours2</P>
+                    </div>
+                </div>     
+            </div>            
+        </div>
+        <!--2 eme ligne-->
+        <div class="row">
+            <div class ="col-12 col-lg-6">
+                <!--3 eme carte-->
+                <div class="card">
+                    <img class="card-img-top" src="images/teddy_3.jpg" alt="image ourson 3">
+                    <div class="card-body">
+                        <h2 class= "card-title"></h2>
+                        <P class="card-text">ours3</P>
+                    </div>
+                </div>            
+            </div>            
+            <div class ="col-12 col-lg-6">
+                <!--4 eme carte-->
+                <div class="card">
+                    <img class="card-img-top" src="images/teddy_4.jpg" alt="image ourson 2">
+                    <div class="card-body">
+                        <h2 class= "card-title"></h2>
+                        <P class="card-text">ours4</P>
+                    </div>
+                </div> 
+            </div>
+        </div>    
+        <!--3 eme ligne-->
+        <div class="row">
+            <div class ="col-12 col-lg-6">
+                <!--5 eme carte-->
+                <div class="card">
+                    <img class="card-img-top" src="images/teddy_5.jpg" alt="image ourson 2">
+                    <div class="card-body">
+                        <h2 class= "card-title"></h2>
+                        <P class="card-text">ours5</P>
+                    </div>
+                </div> 
+            </div>
+        </div>    
+
+    </main>
+
+
+    <footer class ="contenair">
+        <div class="bg-dark">
+            <div class="raw">
+                <div class ="col">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item"><a href="#">A propos</a></li>
+                        <li class="list-inline-item"><a href="#">Données et confidentialité</a></li>
+                        <li class="list-inline-item"><a href="#">Mentions légales</a></li>
+                        <li class="list-inline-item"><a href="#">Fonctionnement du site</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!--script javaScript-->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" 
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" 
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
