--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <!--css-->
      <link rel="stylesheet"  href="public/css/style.css"/>
 
-    <title>Document</title>
+    <title>Page accueil </title>
 </head>
 
 
