--- a/index.html
+++ b/index.html
@@ -4,55 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content ="Orinoco, des ours en peluche fait à la main">
+    <meta name="description" content ="Orinoco est un site de vente en ligne de caméras anciennes, d'ours en peluche et de meuble en bois">
 
    
     <!--bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
-     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
-     crossorigin="anonymous">
-     <!--css-->
-     <link rel="stylesheet"  href="public/css/style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" 
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" 
+    crossorigin="anonymous"> 
 
-    <title>Page accueil </title>
+    <title>Page  d'accueil Orinoco </title>
 </head>
 
 
 
 <body class="container">
-    <header class="bg-dark ">
+    <header class="bg-light ">
         <div class="container">
             <div class="row">
-                <nav class="col navbar navbar-expand-lg nav-bar-dark">
-                    <a class="navbar-brand" href="index.html">
-                    <img src= "images/orinoco-logo.png" width="110" height="90" alt="image du logo ORINOCO"/></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
-                        <span class="navbar-toggler-icon"></span>
-                     </button>
-                <div id="navbarContent" class="collapse navbar-collapse">    
-                    <ul class="navbar-nav">
-                        <li class="nav-items active">
-                            <a class="nav-link" href="index.html">accueil</a>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 ">
+                    <img src="images/orinoco-logo.png" width="180" height="90" class="rounded float-left" alt="image du logo ORINOCO"/>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+                      <ul class="navbar-nav ">                        
+                        <li class="nav-item active">
+                          <a class="nav-link py-3" href="#">Accueil <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-items">
-                            <a class="nav-link" href="#">Panier
-                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
-                                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                              </svg>
-                            </a>                            
-                        </li>
-                    </ul>
-                </div>    
-                </nav>
+                        <li class="nav-item">
+                          <a class="nav-link px-4" href="#">Panier<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart-dash pl-2" viewBox="0 0 16 16">
+                            <path d="M6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                          </svg></li></a>
+                        </li>                                                                       
+                    </div>
+                  </nav>
             </div>    
         </div>
     </header>
 
 
-    <main class="container">
+    <main id="main" class=" main container" >
         <div class="row">
-            <div class="col">
-                <div class="jumbotron">
+            <div class="col px-0">
+                <div class="jumbotron text-center py-3 mt-3 w-100">
                     <h1>Notre selection d'ours en peluche fait à la main</h1>    
                 </div>                
             </div>
@@ -61,90 +57,42 @@
         <div class="row">
             <div class ="col-12 col-lg-6">
                 <!--1 ere carte-->
-                <div class="card">
-                    <img class="card-img-top" src="images/teddy_1.jpg" alt="image ourson 1">
-                    <div class="card-body">
-                        <h2 class= "card-title"></h2>
-                        <P class="card-text">ours1</P>
-                    </div>
-                </div>                
+                <template id="templateArticle">
+                    <article class="card"> 
+                        <img class="card_img" src="" alt="image de l'ours"/>
+                        <a href= "" class="card_link">lien</a>            
+                        <h2 class="card_title">nom ours</h2> 
+                            <p class="card_price">price</p>                                              
+                    </article>  
+                </template>                      
             </div>
-            <div class ="col-12 col-lg-6">
-                <!--2 eme carte-->
-                <div class="card">
-                    <img class="card-img-top" src="images/teddy_2.jpg" alt="image ourson 2">
-                    <div class="card-body">
-                        <h2 class= "card-title"></h2>
-                        <P class="card-text">ours2</P>
-                    </div>
-                </div>     
-            </div>            
-        </div>
-        <!--2 eme ligne-->
-        <div class="row">
-            <div class ="col-12 col-lg-6">
-                <!--3 eme carte-->
-                <div class="card">
-                    <img class="card-img-top" src="images/teddy_3.jpg" alt="image ourson 3">
-                    <div class="card-body">
-                        <h2 class= "card-title"></h2>
-                        <P class="card-text">ours3</P>
-                    </div>
-                </div>            
-            </div>            
-            <div class ="col-12 col-lg-6">
-                <!--4 eme carte-->
-                <div class="card">
-                    <img class="card-img-top" src="images/teddy_4.jpg" alt="image ourson 2">
-                    <div class="card-body">
-                        <h2 class= "card-title"></h2>
-                        <P class="card-text">ours4</P>
-                    </div>
-                </div> 
-            </div>
-        </div>    
-        <!--3 eme ligne-->
-        <div class="row">
-            <div class ="col-12 col-lg-6">
-                <!--5 eme carte-->
-                <div class="card">
-                    <img class="card-img-top" src="images/teddy_5.jpg" alt="image ourson 2">
-                    <div class="card-body">
-                        <h2 class= "card-title"></h2>
-                        <P class="card-text">ours5</P>
-                    </div>
-                </div> 
-            </div>
-        </div>    
-
+                          
     </main>
 
 
-    <footer class ="contenair">
-        <div class="bg-dark">
-            <div class="raw">
-                <div class ="col">
-                    <ul class="list-inline text-center">
-                        <li class="list-inline-item"><a href="#">A propos</a></li>
-                        <li class="list-inline-item"><a href="#">Données et confidentialité</a></li>
-                        <li class="list-inline-item"><a href="#">Mentions légales</a></li>
-                        <li class="list-inline-item"><a href="#">Fonctionnement du site</a></li>
+    <footer class ="container bg-dark py-3   d-flex ">
+            <div class="row w-100" >
+                <div class ="col-6 col-md-12 col  d-flex justify-content-md-center  w-100">
+                    <ul class="list-inline text-left my-0 ">
+                        <li class="list-inline-item px-4 py-3"><a class="py-3 px-2 h-100 W-auto" href="#">A propos</a></li>
+                        <li class="list-inline-item px-4"><a href="#">Données et confidentialité</a></li>
+                        <li class="list-inline-item px-4"><a href="#">Mentions légales</a></li>
+                        <li class="list-inline-item px-4"><a href="#">Fonctionnement du site</a></li>
+                        <li class="list-inline-item px-4"><a href="mailto:contact@orinoco.com">Contactez-nous</a></li>
                     </ul>
                 </div>
-            </div>
-        </div>
+            </div>        
     </footer>
 
     <!--script javaScript-->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" 
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" 
-        crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
+
 
 </body>
 </html>
