--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header >
         <div class="container  ">
             <div class="row ">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 ">
+                <nav class="navbar navbar-expand-lg navbar-light  w-100 ">
                     <img src="images/orinoco-logo.png" width="180" height="90" class="rounded float-left" alt="image du logo ORINOCO"/>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
                     <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                       <ul class="navbar-nav ">                        
                         <li class="nav-item active">
-                          <a class="nav-link py-3" href="#">Accueil <span class="sr-only">(current)</span></a>
+                          <a class="nav-link py-3"  href="#">Accueil <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link pl-0 px-lg-4" href="panier.html">Panier<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart-dash pl-2" viewBox="0 0 16 16">
