affichage couleurs page ourson

--- a/panier.html
+++ b/panier.html
@@ -150,7 +150,7 @@
                     </div>
                   </div>
     
-                  <button id="confirm-command">Passer la commande</button>  
+                  <a href="confirmation.html"><button id="confirm-command">Passer la commande</button></a>  
                 </form>
               </div>
             </section>
