--- a/confirmation.html
+++ b/confirmation.html
@@ -46,8 +46,9 @@
     </header>
 
     <main class="w-full bg-oniPink rounded-lg my-4 py-16 flex justify-center flex-col">
-        <p class="text-center text-4xl font-bold mb-4">Félicitation, votre commande à bien été prise en compte !</p>
+        <p class="text-center text-4xl font-bold mb-4">Nous vous remercions pour votre commande</p>
         <p class="text-center text-xl mb-4">Identifiant de votre commande : <span class="font-bold" id="commandId"></span></p>
+        <p class="text-center text-xl mb-4">Prix total de votre commande: <span class="font-bold" id="commandId"></span></p>
         <a class="inline-block uppercase text-center mx-auto bg-indigo-600 py-2 px-4 font-semibold rounded text-blue" href="index.html">Retourner à l'accueil</a>
       </main>
 
