--- a/panier.html
+++ b/panier.html
@@ -73,8 +73,8 @@
          
          
       <div class = "container_panier d-inline-flex flex-column">
-        <div class="d-flex flex-column">
-          <div class="total_panier">Total du panier: </div>
+        <div class="d-flex flex-column" id="container_total_price">
+          <div class="total_panier" id="total_prix_panier" ></div>
           <div class="bouton_vider_panier my-3">
           <button class= "btn btn-danger" id="btn_delete_panier">Vider le panier</button>
         </div>
@@ -118,7 +118,7 @@
           <div class="row">
             <div class="col">
               <label for="ville"></label>
-              <input type="text" id="ville"  class="form-control" placeholder="Ville" required>
+              <input type="text" id="ville" name="ville" class="form-control" placeholder="Ville" required>
             </div>
             <div class="col">
               <label for="code_postal"></label>
