fin formulaire et debut validation

--- a/confirmation.html
+++ b/confirmation.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="style.css"/>
 
-    <title>Page  d'accueil Orinoco </title>
+    <title>Confirmation commande Orinoco </title>
 </head>
 
 
@@ -46,9 +46,9 @@
     </header>
 
     <main class="w-full bg-oniPink rounded-lg my-4 py-16 flex justify-center flex-col">
-        <p class="text-center text-4xl font-bold mb-4">Nous vous remercions pour votre commande</p>
+        <p class="text-center text-4xl font-bold mb-4" id="remerciement_commande">nous vous remercions pour votre commande</p>
         <p class="text-center text-xl mb-4">Identifiant de votre commande : <span class="font-bold" id="commandId"></span></p>
-        <p class="text-center text-xl mb-4">Prix total de votre commande: <span class="font-bold" id="commandId"></span></p>
+        <p class="text-center text-xl mb-4">Prix total de votre commande: <span class="font-bold" id="commandPrix"></span></p>
         <a class="inline-block uppercase text-center mx-auto bg-indigo-600 py-2 px-4 font-semibold rounded text-blue" href="index.html">Retourner à l'accueil</a>
       </main>
 
@@ -76,7 +76,6 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" 
     crossorigin="anonymous"></script>
 <script src="js/confirmation.js"></script>
-
 
 </body>
 </html>
