--- a/panier.html
+++ b/panier.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="style.css"/>
 
-    <title>Description ourson  </title>
+    <title>page panier </title>
 </head>
 
 <body class="container">
@@ -87,7 +87,7 @@
         <!--champ pour donner des messages à l'utilisateur-->
         <div id="message">Tous les champs sont obligatoires</div>
 
-        <form id="formulaire" method ="post" action="" > <!--desactivation validation auto-->
+        <form id="formulaire_validation" method ="post" action="" > <!--desactivation validation auto-->
           <!--nom et prenom-->  
           <div class="row">
             <div class="col ">
@@ -146,7 +146,7 @@
                 </div>
             </div>
       
-          <a href="confirmation.html"><button id="confirm-command" class="btn btn-primary mb-3">Passer la commande</button></a>  
+          <a href="confirmation.html"><button id="confirm-command" class="btn btn-primary mb-3">Passer la commande</button></a> 
         </form>
       </section>
     </main>
