--- a/panier.html
+++ b/panier.html
@@ -48,7 +48,7 @@
       <div id="panier-recap">               
         <section class="row">
           <div class="col px-0 recapitulatif_commande">                      
-            <div class="jumbotron text-center py-3 mt-3 w-100">                            
+            <div class="jumbotron text-center py-4 mt-3  w-70">                            
               <h2>Récapitulatif de votre commande</h2>                               
             </div>                
           </div>
@@ -59,7 +59,7 @@
         <!--entete du panier-->  
         <thead>               
           <tr id ="row_article_panier">
-            <th id ="article_title">Article</th>
+            <th class="pl-0" id ="article_title">Article</th>
             <th id ="article_price">Prix</th>
             <th id ="article_qte">Quantité</th>
             <th id = "article_color">Couleur</th>
@@ -146,19 +146,19 @@
       </section>
   </main>
     
-  <footer class ="container bg-dark py-3   d-flex ">
-    <div class="row w-100" >
-      <div class ="col-6 col-md-12 col  d-flex justify-content-md-center  w-100">
-        <ul class="list-inline text-left text-md-center my-0 ">
-          <li class="list-inline-item px-4 py-3"><a class="py-3 px-2 h-100 W-auto" href="#">A propos</a></li>
-          <li class="list-inline-item px-4"><a href="#">Données et confidentialité</a></li>
-          <li class="list-inline-item px-4"><a href="#">Mentions légales</a></li>
-          <li class="list-inline-item px-4"><a href="#">Fonctionnement du site</a></li>
-          <li class="list-inline-item px-4"><a href="mailto:contact@orinoco.com">Contactez-nous</a></li>
-        </ul>
-      </div>
-    </div>        
-  </footer>
+  <footer class ="container bg-dark py-3 d-flex ">
+            <div class="row w-100" >
+                <div class ="col-6 col-md-12 col  d-flex justify-content-md-center  w-100">
+                    <ul class="list-inline text-left text-md-center my-0 ">
+                        <li class="list-inline-item px-4 py-3"><a class="py-3 px-2 h-100 W-auto" href="#">A propos</a></li>
+                        <li class="list-inline-item px-4"><a href="#">Données et confidentialité</a></li>
+                        <li class="list-inline-item px-4"><a href="#">Mentions légales</a></li>
+                        <li class="list-inline-item px-4"><a href="#">Fonctionnement du site</a></li>
+                        <li class="list-inline-item px-4"><a href="mailto:contact@orinoco.com">Contactez-nous</a></li>
+                    </ul>
+                </div>
+            </div>        
+    </footer>
 
     <!--script javaScript-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
