--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Page  d'accueil Orinoco </title>
 </head>
 
-<body class="container   ">
+<body class="container">
     <header >
         <div class="container  ">
             <div class="row ">
@@ -28,13 +28,13 @@
                     <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                       <ul class="navbar-nav ">                        
                         <li class="nav-item active pt-1">
-                          <a class="nav-link pb-0"  href="#">Accueil <span class="sr-only">(current)</span></a>
+                          <a class="nav-link pb-0"  href="index.html">Accueil <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link px-lg-4 " href="panier.html">Panier<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-cart-dash pl-2" viewBox="0 0 16 16">
                             <path d="M6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                          </svg></li></a>
+                          </svg></a>
                         </li> 
                       </ul>                                                                          
                     </div>
@@ -42,7 +42,6 @@
             </div>    
         </div>
     </header>
-
 
     <main id="main" class=" main container px-0 " >
         <div class="row">
