--- a/ourson.html
+++ b/ourson.html
@@ -15,28 +15,28 @@
     <title>Description ourson </title>
 </head>
 
-<body class="container   ">
-    <header class="bg-light ">
+<body class="container">
+    <header >
         <div class="container  ">
             <div class="row ">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 ">
-                    <img src="images/orinoco-logo.png" width="180" height="90" class="rounded float-left " alt="image du logo ORINOCO"/>
+                <nav class="navbar navbar-expand-lg navbar-light  w-100 ">
+                    <img src="images/orinoco-logo.png" width="180" height="90" class="rounded float-left" alt="image du logo ORINOCO"/>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                   
                     <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                       <ul class="navbar-nav ">                        
-                        <li class="nav-item active">
-                          <a class="nav-link py-3" href="index.html">Accueil <span class="sr-only">(current)</span></a>
+                        <li class="nav-item active pt-1">
+                          <a class="nav-link pb-0"  href="index.html">Accueil <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link pl-0 px-lg-4" href="panier.html">Panier<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart-dash pl-2" viewBox="0 0 16 16">
+                          <a class="nav-link px-lg-4 " href="panier.html">Panier<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-cart-dash pl-2" viewBox="0 0 16 16">
                             <path d="M6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                          </svg></li></a>                           
-                        </li>   
-                      </ul>                                                                        
+                          </svg></a>
+                        </li> 
+                      </ul>                                                                          
                     </div>
                   </nav>
             </div>    
@@ -58,7 +58,7 @@
                     </select> 
                 </form>     
                        
-                <form action="" methode="post">
+                <form action="" method ="post">
                     <label for="q" class="font-weight-bold" >Quantité : </label>
                         <select id="qt" name="q">
                             <option value="1">1</option>
@@ -69,7 +69,7 @@
                 </form>                                
 
                 <p id= "product_price"></p>   
-                <a class="btn btn-primary mb-4 align-middle"id="bouton" href="" role="button">Ajouter au panier</a>                     
+                <a class="btn btn-primary mb-4 align-middle" id="bouton" href="" role="button">Ajouter au panier</a>                     
         </article>  
     </section>    
 
