--- a/confirmation.html
+++ b/confirmation.html
@@ -48,10 +48,10 @@
 
     <main class="w-full bg-oniPink rounded-lg my-4 py-16 flex justify-center flex-col">
         <p class="text-center text-4xl font-bold my-5" id="remerciement_commande">nous vous remercions pour votre commande</p>
-        <p class="text-center text-xl mb-4">Identifiant de votre commande : <span class="font-bold" id="commandId"></span></p>
-        <p class="text-center text-xl mb-4">Prix total de votre commande: <span class="font-bold" id="commandPrix"></span></p>
-        <p class="text-center text-xl mb-4 " id="adresse_livraison">Votre commande sera livrée: <span class="font-bold"></span></p>
-        <a class="inline-block uppercase text-center mx-auto bg-indigo-600 py-2 px-4 font-semibold rounded text-blue" href="index.html">Retourner à l'accueil</a>
+        <p class="text-center text-xl mb-4 " id="adresse_livraison">Adresse de livraison: <span class="font-bold"></span></p>
+        <p class="text-center text-xl mb-4">Pour un prix total de : <span class="font-bold" id="commandPrix"></span></p>   
+        <p class="text-center text-xl mb-4 font-weight-bold">Identifiant de votre commande : <span class="font-bold" id="commandId"></span></p>            
+        <a class="inline-block uppercase text-center mx-auto bg-indigo-600 py-2 px-4 font-semibold rounded text-blue" id="retour_acceuil" href="index.html">Retourner à l'accueil</a>
       </main>
 
 
