--- a/ourson.html
+++ b/ourson.html
@@ -47,7 +47,7 @@
         <article class="container_page_produit  d-flex flex-column align-items-center "> 
             <!-- <a href="ourson.html" id="card_link" class="card_lien"></a> -->
             <img id="product_img" width="550" height="350" class="my-4 mx-sm-auto "
-                src="" alt="image de l'ours"/>                            
+                src="#" alt="image de l'ours"/>                            
             <h2 id= "product_title" class="my-3">nom ours</h2>
             <p id="product_description">description produit</p>                    
                 <!-- <template id="productColor">-->
