--- a/ourson.html
+++ b/ourson.html
@@ -52,15 +52,15 @@
             <p id="product_description">description produit</p>                    
                 <!-- <template id="productColor">-->
                 <form class="form-inline">
-                    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Choisissez votre couleur</label>
+                    <label class="my-1 mr-2" for="product_color_select">Choisissez votre couleur</label>
                     <select class="custom-select my-1 mr-sm-2" id="product_color_select">
                         <!-- <option selected>Couleur...</option> -->                                                                     
                     </select> 
                 </form>     
                        
-                <form action="" method ="post">
-                    <label for="q" class="font-weight-bold" >Quantité : </label>
-                        <select id="qt" name="q">
+                <form action="#" method ="post">
+                    <label for="qt" class="font-weight-bold" >Quantité : </label>
+                        <select id="qt" name="qt">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
